--- a/src/paper/refs.bib
+++ b/src/paper/refs.bib
@@ -1,3 +1,11 @@
+@article{wa18,
+	Author = {Stefan Wager and Susan Athey},
+	Journal = {Journal of the American Statistical Association},
+	Number = {113},
+	Pages = {1369-1401},
+	Title = {The Colonial Origins of Comparative Development: An Empirical Investigation},
+	Volume = {523},
+	Year = {2018}}
 
 @article{AcemogluJohnsonRobinson01,
 	Author = {Daron Acemoglu and Simon Johnson and James A. Robinson},
