Made automatic table creation for each setup but with calling table name by hand in the final tex files.

--- a/src/paper/research_paper.tex
+++ b/src/paper/research_paper.tex
@@ -93,6 +93,12 @@ The decision rule of an agent is the following:
 
 \end{figure}
 
+\section{Table} % (fold)
+\label{sec:table}
+
+    
+\input{../../out/tables/coverage_table_setup_1.tex}
+\pagebreak
 % section introduction (end)
 
 
