Made it possible to directly assign values for sample size and number of trees automatically deleting dependency to the respective file.

--- a/src/paper/research_paper.tex
+++ b/src/paper/research_paper.tex
@@ -50,7 +50,7 @@
 
 \begin{document}
 
-\title{ Simulation Study on the Coverage Probabilities of Confidence Intervals for Heterogeneous Treatment Effects Estimated with Causal Random Forests\thanks{Maike Metz-Peeters, Universität Bonn. Email: \href{mailto:maike-m-p@web.de}{\nolinkurl{maike-m-p [at] web [dot] de}}.}}
+\title{Simulation Study on the Coverage Probabilities of Confidence Intervals for Heterogeneous Treatment Effects Estimated with Causal Random Forests\thanks{Maike Metz-Peeters, Universität Bonn. Email: \href{mailto:maike-m-p@web.de}{\nolinkurl{maike-m-p [at] web [dot] de}}.}}
 
 \author{Maike Metz-Peeters}
 
@@ -64,16 +64,41 @@
 
 
 \begin{abstract}
-	Some abstract here.
+	In this simulation study, I investigate the coverage probabilities of the confidence intervals for treatment effects estimated by a nonparametric causal forest developed by \citet{wa18}. I replicate there results and ... 
+    (Shortly state results.)
+    
 \end{abstract}
 \clearpage
 
 \section{Introduction} % (fold)
 \label{sec:introduction}
 
+will now first give a brief insight into the method itself, before describing my approach for the simulation study, aftre which I will present my results. It follows a short conclusion.
+
+
 If you are using this template, please cite this item from the references: \citet{GaudeckerEconProjectTemplates}
 
-\citet{Schelling69} example in the code is taken from \citet{StachurskiSargent13}
+
+\section{Background} % (fold)
+\label{sec:background}
+
+
+\section{Simulation Study} % (fold)
+\label{sec:simulation}
+
+\subsection{Approach} % (fold)
+\label{sec:sim_approach}
+
+\subsection{Results} % (fold)
+\label{sec:sim_results}
+    
+\input{../../out/tables/coverage_table_setup_1.tex}
+
+
+
+\section{Conclusion} % (fold)
+\label{sec:conclusion}
+
 
 The decision rule of an agent is the following:
 \input{formulas/decision_rule}
@@ -93,11 +118,7 @@ The decision rule of an agent is the following:
 
 \end{figure}
 
-\section{Table} % (fold)
-\label{sec:table}
 
-    
-\input{../../out/tables/coverage_table_setup_1.tex}
 \pagebreak
 % section introduction (end)
 
