--- a/src/paper/refs.bib
+++ b/src/paper/refs.bib
@@ -2,8 +2,8 @@
 	Author = {Stefan Wager and Susan Athey},
 	Journal = {Journal of the American Statistical Association},
 	Number = {113},
-	Pages = {1369-1401},
-	Title = {The Colonial Origins of Comparative Development: An Empirical Investigation},
+	Pages = {1228-1242},
+	Title = {Estimation and Inference of Heterogeneous Treatment Effects using Random Forests},
 	Volume = {523},
 	Year = {2018}}
 
