--- a/src/paper/research_pres_30min.tex
+++ b/src/paper/research_pres_30min.tex
@@ -44,7 +44,7 @@
     \begin{itemize}
         \item<+-> Please cite this template as: \citet{GaudeckerEconProjectTemplates}
         \item<+-> \citet{Schelling69} example in the code is taken from \citet{StachurskiSargent13}.
-        \item<+-> The decision rule of an agent is \input{formulas/decision_rule}
+        \item<+-> The decision rule of an agent is 
     \end{itemize}
     \note{~}
 \end{frame}
