Removed some depencencies from the documentation and the paper in preparation for removing the template files.

--- a/src/paper/research_paper.tex
+++ b/src/paper/research_paper.tex
@@ -119,23 +119,14 @@ This means that the selection bias into treatment disappears when controlling fo
 \section{Conclusion} % (fold)
 \label{sec:conclusion}
 
-
-
-
 \begin{figure}
-    \caption{Segregation by cycle in the baseline \citet{Schelling69} model as in the \citet{StachurskiSargent13} example}
+    \caption{Plot of Micro data for one forest and one testset of Setup 4 with d=3}
     
-    \includegraphics[width=\textwidth]{../../out/figures/schelling_baseline}
+    \includegraphics[width=0.6\textwidth]{../../out/figures/micro_plot_setup_4_d=3}
 
 \end{figure}
 
 
-\begin{figure}
-    \caption{Segregation by cycle in the baseline \citet{Schelling69} model, limiting the number of potential moves per period to two}
-    
-    \includegraphics[width=\textwidth]{../../out/figures/schelling_max_moves_2}
-
-\end{figure}
 
 
 \pagebreak
