Changed plot generation for micro data such that one multiplot for all different d values is created .

--- a/src/paper/research_paper.tex
+++ b/src/paper/research_paper.tex
@@ -122,7 +122,7 @@ This means that the selection bias into treatment disappears when controlling fo
 \begin{figure}
     \caption{Plot of Micro data for one forest and one testset of Setup 4 with d=3}
     
-    \includegraphics[width=0.6\textwidth]{../../out/figures/micro_plot_setup_4_d=3}
+    \includegraphics[width=\textwidth]{../../out/figures/te_plot_setup_4}
 
 \end{figure}
 
