Changed treatment effect function for setup 4 and fixed some style guide issues in the python files.

--- a/src/paper/research_paper.tex
+++ b/src/paper/research_paper.tex
@@ -115,6 +115,8 @@ This means that the selection bias into treatment disappears when controlling fo
 \input{../../out/tables/coverage_table_setup_1.tex}
 
 
+\input{../../out/tables/coverage_table_setup_4.tex}
+
 
 \section{Conclusion} % (fold)
 \label{sec:conclusion}
