Described main idea behind the method and therefore added some formulas.

--- a/src/paper/formulas/tree_estimator.tex
+++ b/src/paper/formulas/tree_estimator.tex
@@ -1,4 +1,1 @@
-\begin{align*}
-    \text{move} & \quad \text{if} \quad n_\text{neighbours} < 4 \\
-    \text{stay} & \quad \text{if} \quad n_\text{neighbours} \geq 4
-\end{align*}
+\[\hat{\mu}(x)= \frac{1}{|\{i:X_i \in L(x)\}|}\sum_{i:X_i \in L(x)}Y_i\]
