--- a/src/paper/refs.bib
+++ b/src/paper/refs.bib
@@ -7,6 +7,33 @@
 	Volume = {523},
 	Year = {2018}}
 
+@book{htf08,
+	Address = {Stanford},
+	Author = {Trevor Hastie and Robert Tibshirani and Jerome Friedman},
+	Series = {Springer Series in Statistics},
+	Publisher = {Springer},
+	Title = {The Elements of Statistical Learning},
+	Edition = {2},
+	Year = {2008}}
+	
+@article{hir03,
+	Author = {Keisuke Hirano and Guido W. Imbens and Geert Ridder},
+	Journal = {Econometrica},
+	Number = {4},
+	Pages = {1161-1189},
+	Title = {Efficient Estimation of Average Treatment Effects Using the Estimated Propensity Score},
+	Volume = {71},
+	Year = {2003}}
+
+@article{lj06,
+	Author = {Yi Lin and Yongho Jeon},
+	Journal = {Journal of the American Statistical Association},
+	Number = {101},
+	Pages = {578-590},
+	Title = {Random Forests and Adaptive Nearest Neighbors},
+	Volume = {474},
+	Year = {2006}}
+
 @article{AcemogluJohnsonRobinson01,
 	Author = {Daron Acemoglu and Simon Johnson and James A. Robinson},
 	Journal = {The American Economic Review},
