--- a/src/paper/research_paper.tex
+++ b/src/paper/research_paper.tex
@@ -73,7 +73,7 @@
 \section{Introduction} % (fold)
 \label{sec:introduction}
 
-will now first give a brief insight into the method itself, before describing my approach for the simulation study, aftre which I will present my results. It follows a short conclusion.
+I will first give a brief insight into the method itself, before describing my approach for the simulation study, aftre which I will present my results. It follows a short conclusion.
 
 
 If you are using this template, please cite this item from the references: \citet{GaudeckerEconProjectTemplates}
@@ -81,24 +81,42 @@ If you are using this template, please cite this item from the references: \cite
 
 \section{Background} % (fold)
 \label{sec:background}
-The method described in \citet{wa18} is an attempt to estimate heterogeneous treatment effects in a highly data-driven way while still enabling valid statistical inference. This makes it possible to discover even unexpected structures in the data. In the following I will give a short description of this method following \citet{wa18} unless stated otherwise.
+The method described in \citet{wa18} estimates heterogeneous treatment effects in a highly data-driven way using a special form of random forests while still enabling valid statistical inference. This makes it possible to discover even unexpected structures in the data. In the following I will give a short description of the main idea of this method following \citet{wa18} unless stated otherwise. A detailed description of the method will then be given in master thesis. 
 
 For this purpose, the authors assume having at hand \(n\) i.i.d. draws of a feature vector \(X_i \in [0,1]^d\) or following any other density bounded away from 0 and infinity, a treatment indicator \(W_i \in \{0,1\}\), and an outcome \(Y_i \in \mathbb{R}\).
-The treatment effect is the expectation of the difference between the outcome under treatment and without treatment:
+As usual, the treatment effect is the expectation of the difference between the outcome under treatment and without treatment:
 \input{formulas/treatment_effect}
-where \(Y_i^{(1)}\) denotes the outcome if treatment has taken place and \(Y_i^{(0)}\) is the outcome without treatment.
-While heterogeneity in the treatment effect depending on the observable variables is allowed, unconfoundedness is assumed:
+where \(Y_i^{(1)}\) denotes the outcome if treatment has taken place and \(Y_i^{(0)}\) is the outcome without treatment. Heterogeneity in the treatment effect depending on the observable variables is allowed for. 
+As usually, unconfoundedness is assumed:
 \input{formulas/unconfoundedness}
-This means that the selection bias into treatment disappears when controlling for observable features, and thus around observations that are "close" in the feature space behave like a randomized experiment. Nearest neighbor methods exploit this assumption
-\(\) \(\) \(\) 
+This means that the selection bias into treatment disappears when controlling for observable features, and thus around observations that are "close" in the feature space behave like a randomized experiment. 
+Nearest neighbor methods exploit this assumption. As is described by \citet{lj06}, random forests can also be viewed as an adaptively weighted k potential nearest neighbors method. For this reason, a simple k nearest neighbor matching procedure is the used as baseline method.
+As explained in detail by \citet{hir03}, if a consistent estimator for the propensity of receiving treatment \(e(x) = \mathbb{E}[W_i|X_i = x]\)  is available, an unbiased estimator for the treatement effect could be obtained employing: 
+\input{formulas/propensity_estimation}
 
-
+Generally, a random regression forest is build by subsampling (originally by bootstrapping) the data and then growing a tree on each subsample by recursively partitioning the data in order to get the best fit according to some splitting criterion \citep[p. 304 \psqq]{htf08}. The partitioning is repeated until some stopping criterion is achieved. The idea is that the data points in the terminal nodes of a trees are similar to each other and therefore a constant estimator as a simple average over the observed outcomes suffices:
 \input{formulas/tree_estimator}
+where \(L(x)\) denotes the leaf containing \(x\).
+The variable to split on is selected from a randomly chosen subset of variables only, in order to decorrelate the individual trees to decrease variance. Since individual trees generally exhibit low bias but large variance, averaging at each data point over the estimators of all subsample-trees, can lead to a substantially improved estimator. 
+For a comprehensive overview over this method, see \cite[p. 587 \psqq]{htf08}.
+
+To obtain an estimator of heterogeneous treatment effects, \cite{wa18} use the following estimator:
+\input{formulas/tau_forest_estimator}
+
+Similarly the nearest neighbor matching estimator is given by: 
+\input{formulas/tau_knn_estimator}
+where \(S_1\) and \(S_0\) represent the k nearest neighbors in the treatment and control group, respectively.   
+
+
+
+\(\) \(\) 
 
 
 
 
- \(\) \(\) \(\) \(\) \(\) 
+
+
+ \(\) \(\) \(\) \(\) \(\) {}
 
 
 \section{Simulation Study} % (fold)
