Made final choice for the setup parameters for the final project and commented on file coverage_tables.R.

--- a/src/paper/refs.bib
+++ b/src/paper/refs.bib
@@ -6,6 +6,14 @@
 	Title = {Estimation and Inference of Heterogeneous Treatment Effects using Random Forests},
 	Volume = {523},
 	Year = {2018}}
+	
+@article{e14,
+	Author = {Bradley Efron},
+	Journal = {Journal of the American Statistical Association},
+	Number = {9},
+	Pages = {991-1007},
+	Title = {Estimation and Accuracy after Model Selection},
+	Year = {2014}}
 
 @book{htf08,
 	Address = {Stanford},
