Finished the table for simulation and anylsis parameters and included it in the paper.

--- a/src/paper/research_paper.tex
+++ b/src/paper/research_paper.tex
@@ -118,15 +118,14 @@ They show that under these conditions, when using the infinitesimal jackknife de
 \(\) \(\) 
 
 
+\section{Simulation Study} % (fold)
+\label{sec:simulation}
 
-
-
+\input{formulas/setup_table.tex}
 
  \(\) \(\) \(\) \(\) \(\) {}
 
 
-\section{Simulation Study} % (fold)
-\label{sec:simulation}
 
 \subsection{Approach} % (fold)
 \label{sec:sim_approach}
@@ -147,7 +146,8 @@ They show that under these conditions, when using the infinitesimal jackknife de
 
 \section{Conclusion} % (fold)
 \label{sec:conclusion}
-py
+
+
 \begin{figure}
     \caption{Plot of Micro data for one forest and one testset of Setup 4 with d=3}
     
