--- a/src/paper/formulas/setup_table.tex
+++ b/src/paper/formulas/setup_table.tex
@@ -1,11 +1,21 @@
+
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
   \hline
  & Setup 1 & Setup 2 & Setup 3 & Setup 4 \\ 
   \hline
+    Main Effect &  \(2 X_1 -1\)& 0 & 0 & 0 \\ 
+    Tr. Effect & 0 & \(\zeta_1(X_1)\zeta_1(X_2)\) & \(\zeta_2(X_1)\zeta_2(X_2)\) & \(\frac{1}{2}+\beta_{2,2}(X_1)+\frac{3}{4}\beta_{2,2}(X_1)\)\\ 
+     &  & &    &  \\ 
+    Propensity & \(\frac{1}{4}(1+\beta_{2,4}(X_1))\) &  0.5 & 0.5 & 0.5 \\
+    n & 500 & 1000 & 1000 & 250 \\ \hline
+    s & 50 & 250 & 250 & 63 \\ 
+    B & 1000 & 1000 & 1000 & 250 \\
+    Algorithm & propensity & double sample & double sample & double sample \\ \hline
+    & \multicolumn{4}{c}{Where   \(\zeta_1(x)= 1 + \frac{1}{1+e^{-20(x-1/3)}}\) and \(\zeta_2(x)= \frac{2}{1+e^{-12(x-1/2)}}\) and} \\
+    & \multicolumn{4}{c}{\(\beta_{a,b}\) denotes the $\beta$-density function with shape parameters $a$ and $b$}
 
-   \hline
 \end{tabular}
-\caption{Simulation results for setup 1} 
+\caption{Parameters of the data generating processes and analysis parameters} 
 \end{table}
