Added some comments to the R scripts and labeled table with information on all setups.

--- a/src/paper/formulas/setup_table.tex
+++ b/src/paper/formulas/setup_table.tex
@@ -18,4 +18,5 @@
 
 \end{tabular}
 \caption{Parameters of the data generating processes and analysis parameters} 
+\label{table:setup_table}
 \end{table}
