--- a/src/paper/formulas/setup_table.tex
+++ b/src/paper/formulas/setup_table.tex
@@ -1,7 +1,7 @@
 
 \begin{table}[ht]
 \centering
-\begin{tabular}{rrrrr}
+\resizebox{\textwidth}{!}{\begin{tabular}{rrrrr}
   \hline
  & Setup 1 & Setup 2 & Setup 3 & Setup 4 \\ 
   \hline
@@ -16,7 +16,7 @@
     & \multicolumn{4}{c}{Where   \(\zeta_1(x)= 1 + \frac{1}{1+e^{-20(x-1/3)}}\) and \(\zeta_2(x)= \frac{2}{1+e^{-12(x-1/2)}}\) and} \\
     & \multicolumn{4}{c}{\(\beta_{a,b}\) denotes the $\beta$-density function with shape parameters $a$ and $b$}
 
-\end{tabular}
+\end{tabular}}
 \caption{Parameters of the data generating processes and analysis parameters} 
 \label{table:setup_table}
 \end{table}
