Changed formatting of the names refering to files in the documentation.

--- a/src/paper/presentation.tex
+++ b/src/paper/presentation.tex
@@ -93,7 +93,7 @@
     \frametitle{heading here}
     
     \begin{figure}
-        \caption{Plot of Micro data for one forest and one testset of Setup 4 with d=3}
+        \caption{Plot of Micro data of Setup 4}
     
         \includegraphics[height=0.8\textheight]{../../out/figures/te_plot_setup_4}
 
